Adds [spAddAmenity] stored procedure to add a new amenity record to the database.

--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="StoredProcedures\spAddAmenity.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="StoredProcedures\spAddAmenity.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
