Adds Create Databse T-SQL Script. Run this script to create HotelDB database in the MS SQL.

--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="StoredProcedures\spAddAmenity.sql" />
+    <None Remove="StoredProcedures\01_CreateDatabase.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="StoredProcedures\spAddAmenity.sql" />
+    <Content Include="StoredProcedures\01_CreateDatabase.sql" />
   </ItemGroup>
 
   <ItemGroup>
