--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -8,11 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="StoredProcedures\01_CreateDatabase.sql" />
+    <None Remove="StoredProcedures\01_Create Database.sql" />
+    <None Remove="StoredProcedures\02_Create UserRoles.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="StoredProcedures\01_CreateDatabase.sql" />
+    <Content Include="StoredProcedures\02_Create UserRoles.sql" />
+    <Content Include="StoredProcedures\01_Create Database.sql" />
   </ItemGroup>
 
   <ItemGroup>
