--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -10,9 +10,11 @@
   <ItemGroup>
     <None Remove="StoredProcedures\01_Create Database.sql" />
     <None Remove="StoredProcedures\02_Create UserRoles.sql" />
+    <None Remove="StoredProcedures\03_Create Users.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="StoredProcedures\03_Create Users.sql" />
     <Content Include="StoredProcedures\02_Create UserRoles.sql" />
     <Content Include="StoredProcedures\01_Create Database.sql" />
   </ItemGroup>
