--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -13,10 +13,12 @@
     <None Remove="StoredProcedures\03_Create Users Table.sql" />
     <None Remove="StoredProcedures\04_Create Countries Table.sql" />
     <None Remove="StoredProcedures\05_Create States Table.sql" />
+    <None Remove="StoredProcedures\06_Create RoomTypes Table.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\06_Create RoomTypes Table.sql" />
     <Content Include="StoredProcedures\05_Create States Table.sql" />
     <Content Include="StoredProcedures\04_Create Countries Table.sql" />
     <Content Include="StoredProcedures\02_Create UserRoles Table.sql" />
