--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -14,10 +14,12 @@
     <None Remove="StoredProcedures\04_Create Countries Table.sql" />
     <None Remove="StoredProcedures\05_Create States Table.sql" />
     <None Remove="StoredProcedures\06_Create RoomTypes Table.sql" />
+    <None Remove="StoredProcedures\07_Create Rooms Table.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\07_Create Rooms Table.sql" />
     <Content Include="StoredProcedures\06_Create RoomTypes Table.sql" />
     <Content Include="StoredProcedures\05_Create States Table.sql" />
     <Content Include="StoredProcedures\04_Create Countries Table.sql" />
