--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -16,10 +16,12 @@
     <None Remove="StoredProcedures\06_Create RoomTypes Table.sql" />
     <None Remove="StoredProcedures\07_Create Rooms Table.sql" />
     <None Remove="StoredProcedures\08_Create Amenities Table.sql" />
+    <None Remove="StoredProcedures\09_Create RoomAmenities Table.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\09_Create RoomAmenities Table.sql" />
     <Content Include="StoredProcedures\08_Create Amenities Table.sql" />
     <Content Include="StoredProcedures\07_Create Rooms Table.sql" />
     <Content Include="StoredProcedures\06_Create RoomTypes Table.sql" />
