--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -18,10 +18,12 @@
     <None Remove="StoredProcedures\08_Create Amenities Table.sql" />
     <None Remove="StoredProcedures\09_Create RoomAmenities Table.sql" />
     <None Remove="StoredProcedures\10_Create Guest Table.sql" />
+    <None Remove="StoredProcedures\11_Create Reservations Table.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\11_Create Reservations Table.sql" />
     <Content Include="StoredProcedures\10_Create Guest Table.sql" />
     <Content Include="StoredProcedures\09_Create RoomAmenities Table.sql" />
     <Content Include="StoredProcedures\08_Create Amenities Table.sql" />
