--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -24,10 +24,12 @@
     <None Remove="StoredProcedures\14_Create Payments Table.sql" />
     <None Remove="StoredProcedures\15_Create Cancellations Table.sql" />
     <None Remove="StoredProcedures\16_Create RefundMethods Table.sql" />
+    <None Remove="StoredProcedures\17_Create Refunds Table.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\17_Create Refunds Table.sql" />
     <Content Include="StoredProcedures\16_Create RefundMethods Table.sql" />
     <Content Include="StoredProcedures\15_Create Cancellations Table.sql" />
     <Content Include="StoredProcedures\14_Create Payments Table.sql" />
