--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -27,10 +27,12 @@
     <None Remove="StoredProcedures\17_Create Refunds Table.sql" />
     <None Remove="StoredProcedures\18_Create Feedbacks Table.sql" />
     <None Remove="StoredProcedures\19_Insert Dummy data into Database Tables.sql" />
+    <None Remove="StoredProcedures\20_Stored Procedure for User Module.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\20_Stored Procedure for User Module.sql" />
     <Content Include="StoredProcedures\19_Insert Dummy data into Database Tables.sql" />
     <Content Include="StoredProcedures\18_Create Feedbacks Table.sql" />
     <Content Include="StoredProcedures\17_Create Refunds Table.sql" />
