Adds Multiple Stored Procedure for the RoomType Module CRUD and other operations.

--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -28,10 +28,12 @@
     <None Remove="StoredProcedures\18_Create Feedbacks Table.sql" />
     <None Remove="StoredProcedures\19_Insert Dummy data into Database Tables.sql" />
     <None Remove="StoredProcedures\20_Stored Procedure for User Module.sql" />
+    <None Remove="StoredProcedures\21_Stored Procedure for RoomType Module.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\21_Stored Procedure for RoomType Module.sql" />
     <Content Include="StoredProcedures\20_Stored Procedure for User Module.sql" />
     <Content Include="StoredProcedures\19_Insert Dummy data into Database Tables.sql" />
     <Content Include="StoredProcedures\18_Create Feedbacks Table.sql" />
