--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -29,10 +29,12 @@
     <None Remove="StoredProcedures\19_Insert Dummy data into Database Tables.sql" />
     <None Remove="StoredProcedures\20_Stored Procedure for User Module.sql" />
     <None Remove="StoredProcedures\21_Stored Procedure for RoomType Module.sql" />
+    <None Remove="StoredProcedures\22_Stored Procedure for User Module.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\22_Stored Procedure for User Module.sql" />
     <Content Include="StoredProcedures\21_Stored Procedure for RoomType Module.sql" />
     <Content Include="StoredProcedures\20_Stored Procedure for User Module.sql" />
     <Content Include="StoredProcedures\19_Insert Dummy data into Database Tables.sql" />
