--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -32,10 +32,12 @@
     <None Remove="StoredProcedures\22_Stored Procedures for User Module.sql" />
     <None Remove="StoredProcedures\23_Stored Procedures for Amenities Module.sql" />
     <None Remove="StoredProcedures\24_Stored Procedures for RoomAmenities Module.sql" />
+    <None Remove="StoredProcedures\25_Stored Procedures for Search Module.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\25_Stored Procedures for Search Module.sql" />
     <Content Include="StoredProcedures\24_Stored Procedures for RoomAmenities Module.sql" />
     <Content Include="StoredProcedures\23_Stored Procedures for Amenities Module.sql" />
     <Content Include="StoredProcedures\22_Stored Procedures for User Module.sql" />
