--- a/HotelBookingAPI/HotelBookingAPI.csproj
+++ b/HotelBookingAPI/HotelBookingAPI.csproj
@@ -33,10 +33,12 @@
     <None Remove="StoredProcedures\23_Stored Procedures for Amenities Module.sql" />
     <None Remove="StoredProcedures\24_Stored Procedures for RoomAmenities Module.sql" />
     <None Remove="StoredProcedures\25_Stored Procedures for Search Module.sql" />
+    <None Remove="StoredProcedures\26_Stored Procedures for HotelBooking Module.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="StoredProcedures\03_Create Users Table.sql" />
+    <Content Include="StoredProcedures\26_Stored Procedures for HotelBooking Module.sql" />
     <Content Include="StoredProcedures\25_Stored Procedures for Search Module.sql" />
     <Content Include="StoredProcedures\24_Stored Procedures for RoomAmenities Module.sql" />
     <Content Include="StoredProcedures\23_Stored Procedures for Amenities Module.sql" />
